--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/imick-io/node-js-authentication#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^5.0.0",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
